--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mogimail"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 description = "Embedded SMTP server"
@@ -10,7 +10,7 @@ keywords = ["mail", "smtp"]
 readme = "README.en.md"
 
 [dependencies]
-thiserror = "1"
+thiserror = { version = "2", default-features = false }
 
 [[bin]]
 name = "mogimail"
